--- a/HTML-CSS-JS/Assignment 3 - Calculator/calculator.html
+++ b/HTML-CSS-JS/Assignment 3 - Calculator/calculator.html
@@ -47,24 +47,24 @@
                 </div>
             </div>
             <div class="keys">
-                <button class="operator" id="divide">/</button>
-                <button class="operator" id="multiply">x</button>
-                <button class="operator" id="subtract">-</button>
-                <button class="operator" id="add">+</button>
-                <button class="digit" id="7">7</button>
-                <button class="digit" id="8">8</button>
-                <button class="digit" id="9">9</button>
-                <button class="digit" id="4">4</button>
-                <button class="digit" id="5">5</button>
-                <button class="digit" id="6">6</button>
-                <button class="digit" id="1">1</button>
-                <button class="digit" id="2">2</button>
-                <button class="digit" id="3">3</button>
-                <button class="digit" id="0">0</button>
-                <button class="other-buttons" id="sign">+/-</button>
-                <button class="other-buttons" id="decimal">.</button>
-                <button class="clear-button" id="clear">AC</button>
-                <button class="enter-button" id="equals">=</button>
+                <button class="operator" id="divide" onclick="">/</button>
+                <button class="operator" id="multiply" onclick="">x</button>
+                <button class="operator" id="subtract" onclick="">-</button>
+                <button class="operator" id="add" onclick="">+</button>
+                <button class="digit" id="7" onclick="">7</button>
+                <button class="digit" id="8" onclick="">8</button>
+                <button class="digit" id="9" onclick="">9</button>
+                <button class="digit" id="4" onclick="">4</button>
+                <button class="digit" id="5" onclick="">5</button>
+                <button class="digit" id="6" onclick="">6</button>
+                <button class="digit" id="1" onclick="">1</button>
+                <button class="digit" id="2" onclick="">2</button>
+                <button class="digit" id="3" onclick="">3</button>
+                <button class="digit" id="0" onclick="">0</button>
+                <button class="other-buttons" id="sign" onclick="">+/-</button>
+                <button class="other-buttons" id="decimal" onclick="">.</button>
+                <button class="clear-button" id="clear" onclick="">AC</button>
+                <button class="enter-button" id="equals" onclick="">=</button>
             </div>
         </div>
     </div>
