--- a/HTML-CSS-JS/Assignment 3 - Calculator/index.html
+++ b/HTML-CSS-JS/Assignment 3 - Calculator/index.html
@@ -17,23 +17,23 @@
         </div>
         <button class="big" id="clear" onclick="allClear()">AC</button>
         <button id="delete" onclick="backspace()">DEL</button>
-        <button class="operator" onclick="divide()">/</button>
+        <button class="operator" onclick="divide()" disabled>/</button>
         <!-- <button class="operator" onclick="addOperator('divide')">/</button> -->
         <button class="digit" onclick="addNum(7)">7</button>
         <button class="digit" onclick="addNum(8)">8</button>
         <button class="digit" onclick="addNum(9)">9</button>
-        <button class="operator" onclick="multiply()">x</button>
+        <button class="operator" onclick="multiply()" disabled>x</button>
         <!-- <button class="operator" onclick="addOperator('multiply')">x</button> -->
         <button class="digit" onclick="addNum(4)">4</button>
         <button class="digit" onclick="addNum(5)">5</button>
         <button class="digit" onclick="addNum(6)">6</button>
         <!-- <button class="operator" onclick="addOperator('minus')">-</button> -->
-        <button class="operator" onclick="minus()">-</button>
+        <button class="operator" onclick="minus()" disabled>-</button>
         <button class="digit" onclick="addNum(1)">1</button>
         <button class="digit" onclick="addNum(2)">2</button>
         <button class="digit" onclick="addNum(3)">3</button>
         <!-- <button class="operator" onclick="addOperator('add')">+</button> -->
-        <button class="operator" onclick="add()">+</button>
+        <button class="operator" onclick="add()" disabled>+</button>
         <button id="decimal" onclick="addNum('.')">.</button>
         <button class="digit" onclick="addNum(0)">0</button>
         <button class="big" id="equals" onclick="compute()">=</button>
